--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ main {
   background-color: #1f2937;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* Utilities */
 
 .container {
@@ -18,6 +24,8 @@ main {
   border: 0;
   color: #f9faf8;
   font-weight: bold;
+  padding: 0.5rem 1.5rem;
+  border-radius: 5px;
 }
 
 /* Header */
@@ -51,7 +59,20 @@ header {
 
 /* Hero */
 
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7rem 0;
+}
+
 .description {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+  margin-right: 3rem;
+
   & h1 {
     font-size: 48px;
     font-weight: 900;
@@ -61,5 +82,6 @@ header {
   & p {
     font-size: 18px;
     color: #e5e7eb;
+    /* margin: 0.5rem 0; */
   }
 }
