--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 main {
@@ -19,11 +19,15 @@ img {
   max-width: 1000px;
 }
 
+.container-sm {
+  max-width: 750px;
+}
+
 .btn {
   background-color: #3882f6;
   border: 0;
   color: #f9faf8;
-  font-weight: bold;
+  font-weight: 500;
   padding: 0.5rem 1.5rem;
   border-radius: 5px;
 
@@ -32,6 +36,10 @@ img {
     color: #3882f6;
     cursor: pointer;
   }
+}
+
+.btn-outline {
+  border: 2px solid white;
 }
 
 /* Header */
@@ -127,6 +135,59 @@ header {
     & p {
       text-align: center;
       max-width: 150px;
+    }
+  }
+}
+
+/* Quote */
+
+.quote {
+  background-color: #e5e7eb;
+  padding: 7rem 0;
+
+  .quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1f2937;
+  }
+
+  .quote-author {
+    font-weight: bold;
+    margin-top: 1rem;
+    font-size: 24px;
+    text-align: right;
+  }
+}
+
+/* CTA */
+
+.cta {
+  padding: 7rem 0;
+  color: #f9faf8;
+
+  .cta-box {
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding: 3rem;
+
+    .cta-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .cta-description {
+        & h3 {
+          font-size: 24px;
+          font-weight: bold;
+        }
+
+        & p {
+          font-size: 18px;
+          font-weight: 100;
+          margin-top: 0.3rem;
+        }
+      }
     }
   }
 }
